# AnimeVoiceOver

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
app/: main.py
app/backend/: auth.py  requests.py
test/: tests.py
