[tool.poetry]
name = "animevoiceover"
version = "0.1.0"
description = ""
authors = ["smasIner <89355987+smasIner@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bandit = "^1.7.8"
pytest = "^8.1.1"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
