[tool.poetry]
name = "animevoiceover"
version = "0.1.0"
description = ""
authors = ["smasIner <89355987+smasIner@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bandit = "^1.7.8"
pytest = "^8.1.1"
google-api-python-client = "^2.127.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
